@@ -33,6 +33,9 @@ testMul (void)
   ucL = 128;  cR =   1; ur8 = ucL * cR;  ur8b  = cR * ucL; ASSERT (ur8 ==  128); ASSERT (ur8b  ==  128);
   ucL = 128; ucR =   5; r16 = ucL * ucR; r16b = ucR * ucL; ASSERT (r16 ==  640); ASSERT (r16b ==  640);
   ucL = 128; ucR =   1; ur8 = ucL * ucR; ur8b = ucR * ucL; ASSERT (ur8 ==  128); ASSERT (ur8b ==  128);
+
+  ucL =  254;  cR = -1; r16 = ucL *  cR; ASSERT (r16 == -254);
+   cL = -128;  cR = -1; r16 =  cL *  cR; ASSERT (r16 ==  128);
 }
 
 void
